--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node Authentication",
   "main": "app.js",
   "scripts": {
-    "dev": "ts-node-dev --respwan --transple-only src/app.ts",
+    "dev": "ts-node-dev --respwan --inspect --transple-only src/app.ts",
+    "test": "npx ts-node-dev --respawn --transpile-only --debug ./src/app.ts",
     "tsc": "tsc"
   },
   "author": "Luca Tranfaglia",
@@ -31,7 +32,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.2.4",
-    "nanoid": "^4.0.2",
+    "nanoid": "^3.3.4",
     "nodemailer": "^6.9.3",
     "pino": "^8.14.1"
   }
